--- a/Views/TeachingAssistant/Advances.cshtml
+++ b/Views/TeachingAssistant/Advances.cshtml
@@ -113,9 +113,13 @@
                                             {
                                                 <option cuaKhoa="@item.ID_Khoa" name="@item.TenNganh" selected value="@item.ID">@item.TenNganh</option>
                                             }
-                                            else
+                                            else if (userTennganh.Equals(item.Khoa.TenKhoa.ToLower().ToLower()))
                                             {
                                                 <option cuaKhoa="@item.ID_Khoa" name="@item.TenNganh" value="@item.ID">@item.TenNganh</option>
+                                            }
+                                            else
+                                            {
+                                                <option hidden cuaKhoa="@item.ID_Khoa" name="@item.TenNganh" value="@item.ID">@item.TenNganh</option>
                                             }
                                         }
                                     }
@@ -182,7 +186,16 @@
                                             <br />
                                             Tên: @item.TenCBGD
                                         </td>
-                                        <td valign="middle">@(item.ThoiKhoaBieu.First().Thu); Tiết @(item.ThoiKhoaBieu.First().TietHoc); Tuần @(item.ThoiKhoaBieu.First().TuanBD) - @(item.ThoiKhoaBieu.First().TuanKT); Phòng @(item.ThoiKhoaBieu.First().Phong)</td>
+                                        <td valign="middle">
+                                            <ul>
+                                                @foreach (var items in item.ThoiKhoaBieu.ToList())
+                                                {
+                                                    <li>
+                                                        @(items.Thu); Tiết @(items.TietHoc); Tuần @(items.TuanBD) - @(items.TuanKT); Phòng @(items.Phong)
+                                                    </li>
+                                                }
+                                            </ul>
+                                        </td>
                                         <td valign="middle">@item.ThoiKhoaBieu.First().SoTC</td>
                                         <td valign="middle">@item.UngTuyenTroGiang.Count()</td>
                                         <td valign="middle" class="text-nowrap">
