Add function export TA02 & TA03

--- a/Views/ClassManagement/_Export.cshtml
+++ b/Views/ClassManagement/_Export.cshtml
@@ -5,8 +5,8 @@
     int i = 0;
 }
 
-<table id="exportTable" class="table table-hover" style="width:100%">
-    <thead class="table-light">
+<table id="exportTable" style="width:100%">
+    <thead>
         <tr>
             <th class="text-nowrap">TT</th>
             <th class="text-nowrap">MSSV</th>
