--- a/Views/Statisticals/StatisticalRemuneration.cshtml
+++ b/Views/Statisticals/StatisticalRemuneration.cshtml
@@ -87,23 +87,23 @@
             <div class="card h-100">
                 <div class="card-header">
                     <div class="row">
-                        <div class="mb-3 col-md-4">
+                        <div class="mb-3 col-md-3">
                             <label class="form-label">Học kỳ</label>
                             <select id="hocky" class="form-select text-dark me-3 w-100">
                                 @foreach (var item in lstHk)
                                 {
                                     if (item.ID == id_hkGanNhat)
                                     {
-                                        <option selected value="@item.ID">@item.TenHocKy</option>
+                                        <option name="@item.TenHocKy" selected value="@item.ID">@item.TenHocKy</option>
                                         continue;
                                     }
-                                    <option value="@item.ID">@item.TenHocKy</option>
+                                    <option name="@item.TenHocKy" value="@item.ID">@item.TenHocKy</option>
                                 }
                             </select>
                         </div>
                         @if (roleId == 3)
                         {
-                            <div class="mb-3 col-md-4">
+                            <div class="mb-3 col-md-3">
                                 <label class="form-label">Ngành</label>
                                 <select id="nganh" class="form-select text-dark me-3 w-100" data-width="100%">
                                     @foreach (var item in userKhoa.Nganh.ToList())
@@ -119,10 +119,18 @@
                                     }
                                 </select>
                             </div>
+                            <div class="mb-3 col-md-6">
+                                <label class="form-label"> </label>
+                                <div class="w-100 text-end mt-2">
+                                    <a id="exportfile" name="ta03" class="btn btn-outline-secondary">
+                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                                    </a>
+                                </div>
+                            </div>
                         }
                         else
                         {
-                            <div class="mb-3 col-md-4">
+                            <div class="mb-3 col-md-3">
                                 <label class="form-label">Khoa</label>
                                 <select id="khoa" class="form-select text-dark me-3 w-100" data-width="100%">
                                     @foreach (var item in lstKhoa.Where(w => w.Nganh.Count > 0).ToList())
@@ -138,7 +146,7 @@
                                     }
                                 </select>
                             </div>
-                            <div class="mb-3 col-md-4">
+                            <div class="mb-3 col-md-3">
                                 <label class="form-label">Ngành</label>
                                 <select id="nganh" class="form-select text-dark me-3 w-100" data-width="100%">
                                     @foreach (var items in lstKhoa.Where(w => w.Nganh.Count > 0).ToList())
@@ -161,6 +169,14 @@
                                     }
                                 </select>
                             </div>
+                            <div class="mb-3 col-md-3">
+                                <label class="form-label"> </label>
+                                <div class="w-100 text-end mt-2">
+                                    <a id="exportfile" name="ta03" class="btn btn-outline-secondary">
+                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                                    </a>
+                                </div>
+                            </div>
                         }
                     </div>
                 </div>
@@ -176,11 +192,6 @@
                                             <h2 class="h1 fw-bold mb-0">@(ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).Count() > 0 ?ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).Count().ToString("D2") : "0")</h2>
                                             <span>Đã Phân Công</span>
                                         </div>
-                                        <div>
-                                            <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
-                                                <i style="font-size: 24px" class="bi bi-person-fill-gear"></i>
-                                            </span>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -193,11 +204,6 @@
                                         <div class="lh-1 d-flex flex-column gap-1">
                                             <h2 class="h1 fw-bold mb-0">@(tongSoGioQuyDoi == 0 ? "0" : tongSoGioQuyDoi.ToString())</h2>
                                             <span>Tổng Số Giờ Quy Đổi</span>
-                                        </div>
-                                        <div>
-                                            <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
-                                                <i style="font-size: 24px" class="bi bi-person-fill"></i>
-                                            </span>
                                         </div>
                                     </div>
                                 </div>
@@ -212,11 +218,6 @@
                                             <h2 class="h1 fw-bold mb-0">@(tongSoGioThucTe == 0 ? "0" : tongSoGioThucTe.ToString())</h2>
                                             <span>Tổng Số Giờ Thực Tế</span>
                                         </div>
-                                        <div>
-                                            <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
-                                                <i style="font-size: 24px" class="bi bi-person-fill-check"></i>
-                                            </span>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -227,13 +228,8 @@
                                 <div class="card-body d-flex flex-column gap-2">
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="lh-1 d-flex flex-column gap-1">
-                                            <h2 class="h1 fw-bold mb-0">@(tongThuLao == 0 ? "0" : tongThuLao.ToString())đ</h2>
+                                            <h2 class="h1 fw-bold mb-0">@(tongThuLao == 0 ? "0" : tongThuLao.ToString("0,0"))đ</h2>
                                             <span>Tổng Thù Lao</span>
-                                        </div>
-                                        <div>
-                                            <span class="bg-light-warning icon-shape icon-xl rounded-3 text-dark-danger">
-                                                <i style="font-size: 24px" class="bi bi-person-fill-check"></i>
-                                            </span>
                                         </div>
                                     </div>
                                 </div>
@@ -379,7 +375,8 @@
         </div>
     </div>
 </div>
-
+<section style="display: none" id="table-export-data">
+</section>
 <script>
     $(document).ready(function () {
         $('#khoa').on('change', function () {
@@ -468,3 +465,4 @@
 
 <script src="~/Validation/department/statisticals/thulao/filter.js"></script>
 <script src="~/Validation/department/statisticals/thulao/cauhinh.js"></script>
+<script src="~/Validation/department/statisticals/exportfile.js"></script>
