--- a/Views/Statisticals/_FilterRemuneration.cshtml
+++ b/Views/Statisticals/_FilterRemuneration.cshtml
@@ -47,11 +47,6 @@
                             <h2 class="h1 fw-bold mb-0">@(ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).Count() > 0 ?ut.Where(w => w.LopHocPhan.PhanCongTroGiang.FirstOrDefault(wl => wl.ID_TaiKhoan == w.ID_TaiKhoan) != null).ToList().GroupBy(g => g.ID_TaiKhoan).Count().ToString("D2") : "0")</h2>
                             <span>Đã Phân Công</span>
                         </div>
-                        <div>
-                            <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
-                                <i style="font-size: 24px" class="bi bi-person-fill-gear"></i>
-                            </span>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -64,11 +59,6 @@
                         <div class="lh-1 d-flex flex-column gap-1">
                             <h2 class="h1 fw-bold mb-0">@(tongSoGioQuyDoi == 0 ? "0" : tongSoGioQuyDoi.ToString())</h2>
                             <span>Tổng Số Giờ Quy Đổi</span>
-                        </div>
-                        <div>
-                            <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
-                                <i style="font-size: 24px" class="bi bi-person-fill"></i>
-                            </span>
                         </div>
                     </div>
                 </div>
@@ -83,11 +73,6 @@
                             <h2 class="h1 fw-bold mb-0">@(tongSoGioThucTe == 0 ? "0" : tongSoGioThucTe.ToString())</h2>
                             <span>Tổng Số Giờ Thực Tế</span>
                         </div>
-                        <div>
-                            <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
-                                <i style="font-size: 24px" class="bi bi-person-fill-check"></i>
-                            </span>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -98,13 +83,8 @@
                 <div class="card-body d-flex flex-column gap-2">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="lh-1 d-flex flex-column gap-1">
-                            <h2 class="h1 fw-bold mb-0">@(tongThuLao == 0 ? "0" : tongThuLao.ToString())đ</h2>
+                            <h2 class="h1 fw-bold mb-0">@(tongThuLao == 0 ? "0" : tongThuLao.ToString("0,0"))đ</h2>
                             <span>Tổng Thù Lao</span>
-                        </div>
-                        <div>
-                            <span class="bg-light-warning icon-shape icon-xl rounded-3 text-dark-danger">
-                                <i style="font-size: 24px" class="bi bi-person-fill-check"></i>
-                            </span>
                         </div>
                     </div>
                 </div>
